.metadata/.plugins/org.eclipse.cdt.ui/ShirtShooter.build.log
19:55:09 **** Incremental Build of configuration Debug for project ShirtShooter ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\Administrator/wpilib/cpp/current/include" "-IC:\\Users\\Administrator\\workspace\\FRC_2015_2016\\ShirtShooter\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Robot.o" "..\\src\\Robot.cpp" 
..\src\Robot.cpp: In member function 'void Robot::ProcessFireControl()':
..\src\Robot.cpp:152:13: error: no matching function for call to 'wait::wait(double)'
     wait(1.0);
             ^
..\src\Robot.cpp:152:13: note: candidates are:
In file included from c:\frc\usr\include\stdlib.h:42:0,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\cstdlib:72,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\ext\string_conversions.h:41,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\bits\basic_string.h:2834,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\string:52,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\bits\locale_classes.h:40,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\bits\ios_base.h:41,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\ios:42,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\ostream:38,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\iostream:39,
                 from C:\Users\Administrator/wpilib/cpp/current/include/WPILib.h:11,
                 from ..\src\Robot.cpp:1:
c:\frc\usr\include\bits\waitstatus.h:66:7: note: wait::wait()
 union wait
       ^
c:\frc\usr\include\bits\waitstatus.h:66:7: note:   candidate expects 0 arguments, 1 provided
c:\frc\usr\include\bits\waitstatus.h:66:7: note: constexpr wait::wait(const wait&)
c:\frc\usr\include\bits\waitstatus.h:66:7: note:   no known conversion for argument 1 from 'double' to 'const wait&'
c:\frc\usr\include\bits\waitstatus.h:66:7: note: constexpr wait::wait(wait&&)
c:\frc\usr\include\bits\waitstatus.h:66:7: note:   no known conversion for argument 1 from 'double' to 'wait&&'
..\src\Robot.cpp:158:13: error: no matching function for call to 'wait::wait(double)'
     wait(1.0);
             ^
..\src\Robot.cpp:158:13: note: candidates are:
In file included from c:\frc\usr\include\stdlib.h:42:0,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\cstdlib:72,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\ext\string_conversions.h:41,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\bits\basic_string.h:2834,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\string:52,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\bits\locale_classes.h:40,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\bits\ios_base.h:41,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\ios:42,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\ostream:38,
                 from c:\frc\arm-frc-linux-gnueabi\include\c++\4.9.1\iostream:39,
                 from C:\Users\Administrator/wpilib/cpp/current/include/WPILib.h:11,
                 from ..\src\Robot.cpp:1:
c:\frc\usr\include\bits\waitstatus.h:66:7: note: wait::wait()
 union wait
       ^
c:\frc\usr\include\bits\waitstatus.h:66:7: note:   candidate expects 0 arguments, 1 provided
c:\frc\usr\include\bits\waitstatus.h:66:7: note: constexpr wait::wait(const wait&)
c:\frc\usr\include\bits\waitstatus.h:66:7: note:   no known conversion for argument 1 from 'double' to 'const wait&'
c:\frc\usr\include\bits\waitstatus.h:66:7: note: constexpr wait::wait(wait&&)
c:\frc\usr\include\bits\waitstatus.h:66:7: note:   no known conversion for argument 1 from 'double' to 'wait&&'

19:55:11 Build Finished (took 2s.698ms)

